@@ -64,7 +64,7 @@
     $(document).ready(function()
     {
 
-        var url = 'mbean?pretty';
+        var url = '/v1/jmx/mbean';
         $.ajax({
             url: url,
             crossDomain: true,
