@@ -1,6 +1,8 @@
 * 0.80
 
 - [Bug] Fix issue in launcher when inspecting etc and plugin symlinks
+- [Bug] Fix JSONP support in jaxrs for generic types (like collections)
+- Move the HTML user interface for JMX to /v1/jmx
 
 * 0.79
 
